Slow gradient descent

--- a/paint.css
+++ b/paint.css
@@ -28,20 +28,18 @@
     position: absolute;
 }
 .lineDown{
-    background: 
-        linear-gradient(to top right,
+    background: linear-gradient(to top right,
              rgba(0,0,0,0) 0%,
-             rgba(0,0,0,0) calc(50% - 0.5px),
-             #37546e 50%,
-             rgba(0,0,0,0) calc(50% + 0.5px),
+             rgba(0,0,0,0) calc(50% - 1px),
+             rgb(48, 53, 64) 50%,
+             rgba(0,0,0,0) calc(50% + 1px),
              rgba(0,0,0,0) 100%);
 }
 .lineUp{
-    background: 
-    linear-gradient(to top left,
+    background: linear-gradient(to top left,
         rgba(0,0,0,0) 0%,
-        rgba(0,0,0,0) calc(50% - 0.5px),
-        #37546e 50%,
-        rgba(0,0,0,0) calc(50% + 0.5px),
+        rgba(0,0,0,0) calc(50% - 1px),
+        rgb(148, 153, 164) 50%,
+        rgba(0,0,0,0) calc(50% + 1px),
         rgba(0,0,0,0) 100%);
 }
